# hojicha

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPRECATION.md  MIGRATION.md  README.md  STYLE_COMPARISON.md  debug_visual.sh  fast_test.sh  fix_all_examples.sh  fix_behavioral_tests.py  fix_example_imports.sh  fix_imports.sh  fix_test_imports.py  fix_tests.sh  quick_ci_check.sh  run_ci_locally.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  examples.yml  pr.yml  release.yml  security.yml
benches/: async_runtime_bench.rs
docs/: AI_NAVIGATION.md  AI_QUICK_REFERENCE.md  API_MIGRATION.md  ARCHITECTURE.md  ASYNC_DESIGN.md  COMMON_PATTERNS.md  CONCURRENCY_SAFETY.md  DEVELOPMENT.md  MIGRATION_EVENT_API.md  README.md  ROADMAP.md  TESTING_BEST_PRACTICES.md  TODO.md  UI_SYSTEM_SUMMARY.md  VISUAL_IMPROVEMENTS.md
examples/: Cargo.toml  README.md  async_demo.rs  async_examples.rs  async_timer.rs  cancellable_demo.rs  chat.rs  complete_showcase.rs  components_gallery.rs  counter.rs  debug_features.rs  error_handling.rs  getting_started.rs  headless.rs  interactive.rs  layouts.rs  minimal_tabs.rs  phase1_showcase.rs  phase2_showcase.rs  safe_concurrency.rs  showcase.rs  stream_demo.rs  style_showcase.rs  styled_components_gallery.rs  system.rs  tabs_actual.rs  tutorial.rs  ui_showcase.rs  unsafe_concurrency_antipatterns.rs  visual.rs  visual_logged.rs
examples/src/: advanced_error_handling.rs  async_examples.rs  debug_features.rs  debugging.rs  error_handling.rs  event_api_demo.rs  headless.rs  http_example.rs  showcase.rs  system.rs  tutorial.rs  visual.rs  visual_logged.rs  visual_logged_fixed.rs
hojicha/: Cargo.toml
hojicha-core/: Cargo.toml
hojicha-core/benches/: async_runtime_bench.rs
hojicha-core/src/: commands.rs  commands_v2.rs  concurrency.rs  error.rs  lib.rs  logging.rs  program_debug.rs
hojicha-core/src/async_helpers/: http.rs  mod.rs  timer.rs  websocket.rs
hojicha-core/src/debug/: config.rs  mod.rs  tracer.rs
hojicha-core/src/testing/: event_test_harness.rs  mod.rs  test_backend.rs  unified_harness.rs
hojicha-core/tests/: api_consistency_test.rs
hojicha-examples/: Cargo.toml
hojicha-pearls/: Cargo.toml
hojicha-pearls/src/: lib.rs
hojicha-pearls/src/components/: button.rs  list.rs  mod.rs  progress_bar.rs  render_guard.rs  styled_list.rs  styled_table.rs  textarea.rs  unified_list.rs  unified_table.rs  viewport.rs
hojicha-pearls/src/style/: builder.rs  floating.rs  grid.rs  layout.rs  mod.rs  theme.rs
hojicha-runtime/: Cargo.toml
hojicha-runtime/src/: lib.rs  panic_handler.rs  panic_recovery.rs  panic_utils.rs  priority_queue.rs  program.rs  resource_limits.rs  safe_priority.rs  stream_builders.rs
hojicha-runtime/tests/: improved_test_infrastructure.rs  panic_recovery_test.rs  resource_limits_test.rs
hojicha/src/: lib.rs
pearls/: Cargo.toml
pearls/src/: lib.rs
pearls/src/components/: button.rs  (+12 more)
runtime/: Cargo.toml
runtime/src/: lib.rs  panic_handler.rs  program.rs  queue_scaling.rs  resilient_input.rs  safe_mutex.rs  safe_priority.rs  subscription.rs
runtime/src/program/: command_executor.rs  command_executor_panic_tests.rs  error_handler_tests.rs  event_processor.rs  fps_limiter.rs  priority_event_processor.rs
runtime/src/testing/: async_test_utils.rs  mod.rs  test_runner.rs
src/: async_handle.rs  commands.rs  core.rs  error.rs  event.rs  fallible.rs  lib.rs  logging.rs  main.rs  metrics.rs  priority_queue.rs  program.rs  queue_scaling.rs  stream_builders.rs
src/async_helpers/: file_io.rs  http.rs  mod.rs  timer.rs  websocket.rs
src/components/: button.rs  help.rs  keybinding.rs  list.rs  mod.rs  modal.rs  paginator.rs  progress_bar.rs  spinner.rs  status_bar.rs  stopwatch.rs  styled_list.rs  styled_table.rs  table.rs  tabs.rs  text_input.rs  textarea.rs  timer.rs  viewport.rs
src/debug/: inspector.rs  metrics.rs
src/program/: command_executor.rs  event_processor.rs  fps_limiter.rs  priority_event_processor.rs  terminal_manager.rs
src/style/: builder.rs  color.rs  floating.rs  gradient.rs  grid.rs  layout.rs  mod.rs  theme.rs
src/testing/: event_recorder.rs  event_test_harness.rs  mock_terminal.rs  mod.rs  test_runner.rs  time_control.rs
tests/: CURATED_TESTS_SUMMARY.md  TEST_CURATION_PLAN.md  additional_coverage_tests.rs  all_doc_examples_test.rs  api_refactor_tests.rs  async_bridge_integration.rs  async_bridge_stress_tests.rs  async_bridge_tests.rs  async_bridge_working_tests.rs  async_performance_test.rs  async_simple_test.rs  async_testing_example.rs  batch_sequence_optimization_test.rs  batch_size_limits_test.rs  cancellable_operations_tests.rs  cmd_none_clarity_test.rs  common_patterns_test.rs  component_integration_test_simple.rs  debug_features_test.rs  deterministic_test_example.rs  doc_examples_test.rs  doc_readme_test.rs  error_handling_tests.rs  event_api_test.rs  event_command_property_tests.rs  event_loop_integration_tests.rs  event_priority_tests.rs  event_queue_test.rs  filter_test.rs  focus_test.rs  headless_program_test.rs  input_and_logging_test.rs  integration_test.rs  integration_tests.rs  lifecycle_test.rs  metrics_property_tests.rs  metrics_test.rs  mouse_event_api_test.rs  mouse_test.rs  paste_test.rs  (+24 more)
tests/behavioral/: api_refactor_tests.rs  async_bridge_integration.rs  async_simple_test.rs  cancellable_operations_tests.rs  component_integration_test_simple.rs  error_handling_tests.rs  event_loop_integration_tests.rs  filter_test.rs  focus_test.rs  headless_program_test.rs  integration_tests.rs  mouse_test.rs  paste_test.rs  readme_examples_test.rs  snapshot_tests.rs  stream_integration_tests.rs  suspend_test.rs
tests/common/: mod.rs
tests/property/: event_command_property_tests.rs  priority_queue_property_tests.rs  program_property_tests.rs  property_tests.rs  queue_resize_property_tests.rs
tests/runtime/: command_executor_panic_tests.rs  error_handler_tests.rs
tests/snapshots/: snapshot_tests__list_snapshot.snap  snapshot_tests__list_third_selected.snap  snapshot_tests__spinner_dots.snap  snapshot_tests__spinner_snapshot.snap  (+3 more)
(+10 files in other folders)
