[workspace]
members = ["."]

[package]
name = "hojicha"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
authors = ["McCoy Reynolds Becker <mccoybecker@gmail.com>"]
description = "Elm Architecture for terminal UIs in Rust, built on Ratatui"
homepage = "https://github.com/evil-mind-evil-sword/hojicha"
documentation = "https://docs.rs/hojicha"
readme = "README.md"
repository = "https://github.com/evil-mind-evil-sword/hojicha"
license = "GPL-3.0"
keywords = ["tui", "terminal", "elm", "ratatui", "cli"]
categories = ["command-line-interface", "gui", "asynchronous"]
exclude = [
    ".github",
    "docs/",
    "*.profraw",
    "coverage/",
    "target/",
    ".git",
    "CLAUDE.md"
]

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
tokio = { version = "1.47", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
anyhow = "1.0"
log = "0.4"
hdrhistogram = "7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.20"

# Logging
chrono = "0.4"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
libc = "0.2"

[dev-dependencies]
proptest = "1.6"
tempfile = "3.14"
pretty_assertions = "1.4"
insta = { version = "1.43", features = ["colors", "filters"] }
chrono = "0.4"
futures = "0.3"
tokio-stream = "0.1"
tokio = { version = "1.47", features = ["full", "test-util"] }

[features]
default = []

[[example]]
name = "tutorial"

[[example]]
name = "showcase"

[[example]]
name = "visual"

[[example]]
name = "async_examples"

[[example]]
name = "system"

[[example]]
name = "debug_features"

[[example]]
name = "error_handling"

[[example]]
name = "headless"