[workspace]
members = [".", "pearls", "runtime", "examples"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
authors = ["McCoy Reynolds Becker <mccoybecker@gmail.com>"]
homepage = "https://github.com/evil-mind-evil-sword/hojicha"
documentation = "https://docs.rs/hojicha"
repository = "https://github.com/evil-mind-evil-sword/hojicha"
license = "GPL-3.0"

[workspace.dependencies]
# Internal crates
hojicha-core = { path = ".", version = "0.1.0" }
hojicha-pearls = { path = "pearls", version = "0.1.0" }
hojicha-runtime = { path = "runtime", version = "0.1.0" }
hojicha-examples = { path = "examples", version = "0.1.0" }

# External dependencies
ratatui = "0.29"
crossterm = "0.29"
tokio = { version = "1.47", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package]
name = "hojicha-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Core Elm Architecture abstractions for terminal UIs in Rust"
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords = ["tui", "terminal", "elm", "architecture", "tea"]
categories = ["command-line-interface", "gui"]
exclude = [
    ".github",
    "docs/",
    "*.profraw",
    "coverage/",
    "target/",
    ".git",
    "CLAUDE.md"
]

[dependencies]
# Core dependencies needed for TEA abstractions
anyhow = { workspace = true }
log = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
tokio = { workspace = true }
chrono = "0.4"


[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# For testing only - not direct dependencies
hojicha-runtime = { path = "runtime" }
hojicha-pearls = { path = "pearls" }
proptest = "1.6"
tempfile = "3.14"
pretty_assertions = "1.4"
insta = { version = "1.43", features = ["colors", "filters"] }
chrono = "0.4"
futures = { workspace = true }
tokio-stream = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
criterion = "0.5"

[features]
default = []


[[test]]
name = "behavioral_integration"
path = "tests/behavioral/integration_tests.rs"

[[test]]
name = "behavioral_api"
path = "tests/behavioral/api_refactor_tests.rs"

[[test]]
name = "behavioral_async"
path = "tests/behavioral/async_simple_test.rs"

[[test]]
name = "behavioral_headless"
path = "tests/behavioral/headless_program_test.rs"

[[bench]]
name = "async_runtime_bench"
harness = false
