[workspace]
members = ["hojicha", "hojicha-core", "pearls", "runtime", "examples"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.80.0"
authors = ["McCoy Reynolds Becker <mccoybecker@gmail.com>"]
homepage = "https://github.com/evil-mind-evil-sword/hojicha"
documentation = "https://docs.rs/hojicha"
repository = "https://github.com/evil-mind-evil-sword/hojicha"
license = "GPL-3.0"

[workspace.dependencies]
# Internal crates
hojicha = { path = "hojicha", version = "0.2.0" }
hojicha-core = { path = "hojicha-core", version = "0.2.0" }
hojicha-pearls = { path = "pearls", version = "0.2.0" }
hojicha-runtime = { path = "runtime", version = "0.2.0" }
hojicha-examples = { path = "examples", version = "0.2.0" }

# External dependencies
ratatui = "0.29"
crossterm = "0.29"
tokio = { version = "1.47", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"