[package]
name = "hojicha-core"
version = "0.2.0"
edition = "2021"
rust-version = "1.80.0"
authors = ["McCoy Reynolds Becker <mccoybecker@gmail.com>"]
description = "Core Elm Architecture abstractions for terminal UIs in Rust"
homepage = "https://github.com/evil-mind-evil-sword/hojicha"
documentation = "https://docs.rs/hojicha-core"
readme = "../README.md"
repository = "https://github.com/evil-mind-evil-sword/hojicha"
license = "GPL-3.0"
keywords = ["tui", "terminal", "elm", "architecture", "tea"]
categories = ["command-line-interface", "gui"]

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
tokio = { version = "1.47", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
async-stream = "0.3"
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
hdrhistogram = "7.5"
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.4"
proptest = "1.4"
tempfile = "3.8"
env_logger = "0.11"

[[bench]]
name = "async_runtime_bench"
harness = false