[package]
name = "hojicha-examples"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
hojicha-core = { workspace = true }
hojicha-runtime = { workspace = true }
hojicha-pearls = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
chrono = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }

[[example]]
name = "tutorial"
path = "../examples/tutorial.rs"

[[example]]
name = "showcase"
path = "../examples/showcase.rs"

[[example]]
name = "visual"
path = "../examples/visual.rs"

[[example]]
name = "async_examples"
path = "../examples/async_examples.rs"

[[example]]
name = "system"
path = "../examples/system.rs"

[[example]]
name = "debug_features"
path = "../examples/debug_features.rs"

[[example]]
name = "error_handling"
path = "../examples/error_handling.rs"

[[example]]
name = "headless"
path = "../examples/headless.rs"

[[example]]
name = "counter"
path = "../examples/counter.rs"

[[example]]
name = "components_gallery"
path = "../examples/components_gallery.rs"

[[example]]
name = "visual_showcase"
path = "../examples/visual_showcase.rs"

[[example]]
name = "visual_showcase_clean"
path = "../examples/visual_showcase_clean.rs"

[[example]]
name = "visual_logged"
path = "../examples/visual_logged.rs"

[[example]]
name = "visual_logged_fixed"
path = "../examples/visual_logged_fixed.rs"

[[example]]
name = "test_boxes_crash"
path = "../examples/test_boxes_crash.rs"