[package]
name = "hojicha-pearls"
version = "0.2.0"
edition = "2021"
authors = ["The Hojicha Contributors"]
description = "UI components and styling for Hojicha TUI framework"
repository = "https://github.com/thegummaster/hojicha"
license = "MIT OR Apache-2.0"
keywords = ["tui", "terminal", "components", "ui", "widgets"]
categories = ["command-line-interface"]

[dependencies]
# Core hojicha dependency
hojicha-core = { path = "../hojicha-core", version = "0.2.0" }

# TUI rendering
ratatui = { version = "0.29", features = ["all-widgets"] }

# Utilities
crossterm = { workspace = true }
unicode-width = "0.2"
unicode-segmentation = "1.10"

# Logging
log = "0.4"

[dev-dependencies]
pretty_assertions = "1.4"
proptest = "1.4"