[package]
name = "hojicha-runtime"
version = "0.1.0"
edition = "2021"
authors = ["The Hojicha Contributors"]
description = "Event handling and async runtime for Hojicha TUI framework"
repository = "https://github.com/thegummaster/hojicha"
license = "MIT OR Apache-2.0"
keywords = ["tui", "terminal", "async", "runtime", "events"]
categories = ["command-line-interface", "asynchronous"]

[dependencies]
# Core hojicha dependency
hojicha-core = { path = "..", version = "0.1.0" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["time"] }
tokio-util = "0.7"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Terminal handling
crossterm = { workspace = true }
ratatui = "0.29"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
hdrhistogram = "7.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
proptest = "1.4"
tempfile = "3.8"